# praxis

./: .gitignore  .gitmodules  .npmignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CROSS_LANGUAGE_SYNC.md  Cargo.toml  DECISION_LEDGER_IMPLEMENTATION.md  DECISION_LEDGER_SUMMARY.md  DESIGN.md  ELEVATION_SUMMARY.md  FEATURE_SUMMARY.md  FRAMEWORK.md  GETTING_STARTED.md  GOLDEN_PATH_IMPLEMENTATION.md  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_ENHANCEMENT_SUMMARY.md  LICENSE  MIGRATION_GUIDE.md  MONOREPO.md  PROTOCOL_VERSIONING.md  README.md  ROADMAP.md  SECURITY.md  STREAM_C_COMPLETION.md  TASK_1_COMPLETE.md  TASK_1_SUMMARY.md  VERSION_0.2.0_RELEASE_NOTES.md  ValidationChecklist.md  check-exports.cjs  deno.json  eslint.config.js  import_map.json  jsr.json  package-lock.json  package.json  pnpm-lock.yaml  (+4 more)
.github/: BOT_PR_TEMPLATE.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  copilot-setup-steps.yml  dependabot.yml  labels.yml
cli/: index.ts
crates/praxis-native/: .npmignore  Cargo.toml  build.rs  index.d.ts  index.js  package.json
crates/praxis-native/__test__/: index.spec.ts
crates/praxis-native/examples/: wind-chess-v2.px  wind-chess-v3-dataflow.px
crates/praxis-native/npm/darwin-arm64/: README.md  package.json
crates/praxis-native/npm/darwin-x64/: README.md  package.json
crates/praxis-native/npm/linux-arm64-gnu/: README.md  package.json
crates/praxis-native/npm/linux-arm64-musl/: README.md  package.json
crates/praxis-native/npm/linux-x64-gnu/: README.md  package.json
crates/praxis-native/npm/linux-x64-musl/: README.md  package.json
crates/praxis-native/npm/win32-x64-msvc/: README.md  package.json
crates/praxis-native/src/: e2e_tests.rs  lib.rs  native_functions.rs
crates/praxis-native/src/px/: async_executor.rs  builder.rs  builder_test.rs  compiler.rs  compose.rs  config_entity_test.rs  eval.rs  executor.rs  grammar.pest  lint.rs  mod.rs  resolver.rs  scenario_runner.rs  tests_new_features.rs  watcher.rs
crates/praxis-native/tests/: orchestration_e2e.rs
crates/px-ast/: Cargo.toml
crates/px-ast/src/: common.rs  constructs.rs  expressions.rs  procedures.rs  types.rs  values.rs
crates/px-grammar-gen/: Cargo.toml
crates/px-grammar-gen/src/: grammar.rs  main.rs
crates/px-grammar-gen/src/fragments/: declarations.pest  v1_steps.pest
csharp/: Praxis.sln
docs/: API.md  BOT_UPDATE_POLICY.md  DOGFOODING_CHECKLIST.md  DOGFOODING_INDEX.md  DOGFOODING_QUICK_START.md  KNO_ENG_EXTRACTION_PLAN.md  MONETIZATION.md  PLURES_TOOLS_INVENTORY.md  REACTIVE_REDESIGN.md  README.md  SVELTE_INTEGRATION_STRATEGY.md  TERMINAL_NODE.md  TESTING_BOT_WORKFLOWS.md
src/: dsl.ts  (+8 more)
(+415 files in other folders)
