[package]
name = "praxis-native"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi4", "async", "serde"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pest = "2"
pest_derive = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["time", "macros", "rt"] }
futures = "0.3"
regex = "1"
tracing = "0.1"
notify = "6"
walkdir = "2"

[build-dependencies]
napi-build = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "time"] }
