[package]
name = "praxis-native"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["napi-binding"]
napi-binding = ["dep:napi", "dep:napi-derive", "dep:napi-build"]

[dependencies]
pluresdb-px = { git = "https://github.com/plures/pluresdb", rev = "ef91aa6", features = ["watcher", "async"] }
napi = { version = "2", default-features = false, features = ["napi4", "async", "serde"], optional = true }
napi-derive = { version = "2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pest = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
async-trait = "0.1"
tokio = { version = "1", features = ["time", "macros", "rt", "sync"] }
futures = "0.3"
regex = "1"
tracing = "0.1"

[build-dependencies]
napi-build = { version = "2", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "time"] }

